create blog as a .gitrepos

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-__pycache__/
-.venv/
-.~lock*
+*.apikey
 *.kate-swp
+*.mkv
+*.mp3
+*.mp4
+*.webm
 .chromium-browser/
 .idea/
-*.apikey
+.venv/
+.~lock*
+/blog/
+__pycache__/
 client_secret.json
-*.mp3
-*.webm
-*.mp4
-*.mkv
